--- a/workout-frontend/src/Navbar/Navbar.module.css
+++ b/workout-frontend/src/Navbar/Navbar.module.css
@@ -64,6 +64,12 @@
     padding-bottom: 6px !important;
 }
 
+.sidebar{
+    display: flex !important;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
 .loginBtn:hover{
     color: white!important;
     background-color: transparent !important;
