--- a/workout-frontend/src/Auth/Auth.module.css
+++ b/workout-frontend/src/Auth/Auth.module.css
@@ -4,7 +4,7 @@
   width: 420px;
   height: 440px;
   background: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgb(247, 206, 130);
   backdrop-filter: blur(20px);
   box-shadow: 0px 0px 10px 10px hsl(39, 100%, 10%);
   color: #fff;
@@ -34,7 +34,7 @@
   height: 25%;
   background: transparent;
   outline: none;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgb(247, 206, 130);
   border-radius: 25px;
   font-size: 16px;
   color: #fff;
@@ -126,8 +126,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-bottom-left-radius: 15px;
+  border-top-right-radius: 15px;
   cursor: pointer;
   z-index: 1;
 }
