--- a/workout-frontend/src/Navbar/Navbar.module.css
+++ b/workout-frontend/src/Navbar/Navbar.module.css
@@ -65,11 +65,21 @@
 }
 
 .sidebar{
+    pointer-events: none !important;
+    top: 0;
+    width: 100vw;
+    height: 100vh;  
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    overflow: hidden !important;
-    transition: 0.5s ease-in-out;
+    overflow: hidden;
+    transform: translateX(100%);
+    transition: 0.6s cubic-bezier(0, -0.16, 0.35, 1.16);
+}
+
+.sidebar.active{
+    transform: translateX(0)
 }
 
 .loginBtn:hover{
@@ -96,16 +106,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    transform: scale(0);
     opacity: 0;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(0px);
     transition: opacity 0.3s ease-in-out, 
         backdrop-filter 0.3s ease-in-out;
+        
   }
 
 .container.active{
-    transform: scale(1);
     opacity: 1;
     backdrop-filter: blur(5px);
     transition: opacity 0.3s ease-in-out, 
