--- a/workout-frontend/src/Sidebar/Sidebar.module.css
+++ b/workout-frontend/src/Sidebar/Sidebar.module.css
@@ -1,4 +1,6 @@
 .sidebar{
+    margin-top: 10vh;
+    pointer-events: all;
     font-size: 17px;
     font-family: Oxygen, Ubuntu, Cantarell, 'Open Sans', 
         'Helvetica Neue', sans-serif;
@@ -7,15 +9,9 @@
     align-items: center !important;
     background-color: transparent !important;
     width: 13vw;
-    height: 0vh;
-    position: fixed;
-    transform: translateX(100%);
-    transition: 0.5s ease-in-out;
-}
-
-.sidebar.active{
-    transform: translateX(0);
     height: 90vh;
+    position: fixed;
+    transition: 0.5s ease-in-out;
 }
 
 .sidebar a{
@@ -73,6 +69,7 @@
 
 /* Logout Confirmation window */
 .logoutBg{
+    pointer-events: all;
     opacity: 0;
     position: fixed;
     top: 0;
