--- a/workout-frontend/src/Sidebar/UserData/UserData.module.css
+++ b/workout-frontend/src/Sidebar/UserData/UserData.module.css
@@ -48,7 +48,7 @@
 }
 
 .fourthWrapper button{
-    margin: 5px 5px;
+    margin: 5px 10px;
 }
 
 .fourthWrapper .editButton{
@@ -58,7 +58,7 @@
     width: 30px;
     height: 30px;
     background-color: transparent;
-    color: white;
+    color: wheat;
     font-size: 16px;
     font-weight: bold;
     transition: box-shadow 0.35s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -68,6 +68,25 @@
     color: hsl(0, 0%, 0%);
     box-shadow: 0px 0px 15px 2px hsl(59, 53%, 51%), 0px 0px 1px 0.1px inset;
     background-color: rgb(202, 211, 77) !important;
+}
+
+.fourthWrapper .saveButton{
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 13px 2px hsl(135, 100%, 64%), 0px 0px 1px 0.1px inset;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    color: hsl(135, 100%, 64%);
+    font-size: 16px;
+    font-weight: bold;
+    transition: box-shadow 0.35s ease-in-out, color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.fourthWrapper .saveButton:hover{
+    color: hsl(0, 0%, 0%);
+    box-shadow: 0px 0px 15px 2px hsl(123, 69%, 49%), 0px 0px 1px 0.1px inset;
+    background-color: rgb(74, 255, 57) !important;
 }
 
 
